src/testCases/parserTestCases/correct/assignStmtTailC.cs16
-- Carston Schilds, Feb 21st 2016
void main(void){
    x := foo();
    y[1] := bar();
}