src/testCases/parserTestCases/error/declarationE.cs16
-- Carston Schilds, Feb 21st 2016

-- missing type
foo1(void){;}
foo2(void){;}
foo3(void){;}

-- missing id
void (void){;}
int (void){;}
bool (void){;}

-- missing tail
void foo1
int foo2
bool foo3